2008-08-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/fontface.h: Add a bunch of documentation for the new FontFace API

2008-08-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.h: fix all of the TODOS by providing alternate functions
	that begin with get_ to provide consistency with other parts of cairomm (and
	glibmm, etc).

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.h: move some text-related typedefs into the fontface
	header since they're needed for new user font API and that's really where they
	should be owned.  context.h includes fontface.h, so there should not be any
	breakage for people who were just including context.h
	* cairomm/enums.h: add user font type to font type enum
	* cairomm/fontface.cc:
	* cairomm/fontface.h: add UserFontFace class.  This class has a set of
	callbacks that can be used to do certain things.  In order to do this in a
	flexible way, I have added libsigc++ as a dependency of cairo to achieve this
	* configure.in: add check for libsigc++
	* tests/test-font-face.cc: add tests for UserFontFace

2008-08-15  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.h:
	* cairomm/scaledfont.cc: the static ::create() function took a FontFace by
	reference rather than by RefPtr, which means the API was essentially unusably
	broken.  So this is an API break, but I don't see any other option.

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>

	* .gitignore: added new files to ignore
	* cairomm/fontface.cc:
	* cairomm/fontface.h: implement the ToyFontFace class
	* configure.in:
	* examples/Makefile.am:
	* examples/text/Makefile.am: Renamed from examples/text-rotate/Makefile.am.
	* examples/text/text-rotate.cc: Renamed from examples/text-rotate/text-rotate.cc.
	* examples/text/toy-text.cc: Added.
	* tests/Makefile.am:
	* tests/test-font-face.cc: Added.  excercise the functionality of
	ToyFontFace slightly

2008-08-14  Jonathon Jongsma  <jjongsma@gnome.org>
